<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_specification"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/info_game"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_spec_display_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/genre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_specification"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_spec_display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/content_specs_genre"
        app:layout_constraintStart_toEndOf="@+id/text_spec_display_title"
        app:layout_constraintTop_toBottomOf="@+id/text_specification"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_spec_size_title"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/system_requirement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_spec_display" />

    <TextView
        android:id="@+id/text_spec_size"
        android:layout_width="0dp"
        android:layout_height="127dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/content_specs_max"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_spec_size_title"
        app:layout_constraintTop_toBottomOf="@+id/text_spec_display"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_battery"
        android:layout_width="0dp"
        android:layout_height="135dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="152dp"
        android:text="@string/content_specs_min"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_spec_size_title"
        app:layout_constraintTop_toBottomOf="@+id/text_spec_display"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="106dp" />

</androidx.constraintlayout.widget.ConstraintLayout>